fix: use embedded font for consistent table column widths across plat… (#768)
* fix: use embedded font for consistent table column widths across platforms

Refs: #766

* fix: use embedded font for consistent table column widths across platforms

Refs: #766

* fix: use embedded font for consistent table column widths across platforms

Refs: #766

* fix: use embedded font for consistent table column widths across platforms

Refs: #766

* fix: use embedded font for consistent table column widths across platforms

Refs: #766

* fix: use embedded font for consistent table column widths across platforms

Refs: #766

* fix: use embedded font for consistent table column widths across platforms

Refs: #766

* fix: use embedded font for consistent table column widths across platforms

Refs: #766